--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "material-ui": "~0.4.1",
     "react-tap-event-plugin": "~0.1.3",
     "reflux": "~0.2.1",
-    "react-router": "~0.11.6"
+    "react-router": "~0.11.6",
+    "store": "~1.3.17"
   }
 }
