--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-tap-event-plugin": "~0.1.3",
     "reflux": "~0.2.1",
     "react-router": "~0.11.6",
-    "store": "~1.3.17"
+    "store": "~1.3.17",
+    "howler": "~1.1.25"
   }
 }
