--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "react": "~0.12.2",
     "sugar": "~1.4.1",
     "jquery": "~2.1.3",
-    "material-ui": "~0.4.1",
-    "react-tap-event-plugin": "~0.1.3",
-    "reflux": "~0.2.1",
-    "react-router": "~0.11.6",
+    "react-tap-event-plugin": "~0.1.4",
+    "reflux": "~0.2.5",
+    "react-router": "~0.12.0",
     "store": "~1.3.17",
-    "howler": "~1.1.25"
+    "howler": "~1.1.25",
+    "material-ui": "~0.7.0"
   }
 }
